--- a/fontend/src/css/main.css
+++ b/fontend/src/css/main.css
@@ -153,6 +153,58 @@ address {
 
 body {
   background-color: #f2f2f2;
+  font-family: var(--font-2);
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--font-1);
+}
+
+.bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -3;
+  width: 100%;
+  height: 100vh;
+  background: url("../assets/background.png");
+  background-size: cover;
+  background-position: center;
+}
+
+.bg::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -2;
+  width: 100%;
+  height: 100%;
+  background: rgba(51, 51, 51, 0.5);
+}
+
+.btn-style-1, .btn-style-2, .btn-style-3, .btn-style-4 {
+  border-radius: 0.4rem;
+  font-family: var(--font-1);
+  text-decoration: none;
+  color: #eee;
+  transition: 0.2s;
+}
+.btn-style-3, .btn-style-4 {
+  background: none;
+}
+.btn-style-1 {
+  background-color: var(--color-1);
+}
+.btn-style-2 {
+  background-color: var(--color-2);
+}
+.btn-style-3 {
+  border: 2px solid var(--color-1);
+}
+.btn-style-4 {
+  border: 2px solid var(--color-1);
 }
 
 /*# sourceMappingURL=main.css.map */
