--- a/fontend/src/sass/bases/_bases.scss
+++ b/fontend/src/sass/bases/_bases.scss
@@ -1,4 +1,34 @@
 
 body{
     background-color: #f2f2f2;
+    font-family: var(--font-2);
+}
+
+h1, h2, h3, h4, h5, h6{
+    font-family: var(--font-1);
+}
+
+.bg{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -3;
+
+    width: 100%;
+    height: 100vh;
+
+    background: url('../assets/background.png');
+    background-size: cover;
+    background-position: center;
+}
+.bg::before{
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -2;
+    width: 100%;
+    height: 100%;
+    background: rgba(51, 51, 51, .5);
 }
